--- a/styles.css
+++ b/styles.css
@@ -33,15 +33,48 @@ h1 {
   box-shadow: 0 4px 15px 0px rgba(0, 0, 0, 0.15);
 }
 
+.loader-box {
+  gap: 40px;
+  display: flex;
+}
+
+.loader-box * {
+  animation: jump 1s 5;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+}
+
+.loader-element-1 {
+  background-color: #99e2d0;
+  animation-delay: 0.1s;
+}
+
+.loader-element-2 {
+  background-color: #99e2d0;
+  animation-delay: 0.2s;
+}
+
+.loader-element-3 {
+  background-color: #99e2d0;
+  animation-delay: 0.3s;
+}
+
+.loader-element-4 {
+  background-color: #99e2d0;
+  animation-delay: 0.4s;
+}
+
 /**************************** Header **************************/
 .centrer-header {
   justify-content: center;
-  padding: 12px;
+  padding: 30px;
 }
 
 .location {
   background-color: #f2f2f2;
   box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 15px;
 }
 
 /**************************** Section Information acceuil **************************/
@@ -56,6 +89,7 @@ h1 {
 }
 
 .style-button {
+  transition: 1s;
   margin-top: 15px;
   padding: 15px 50px;
   border-radius: 25px;
@@ -71,9 +105,9 @@ h1 {
 }
 
 .style-button:hover {
-  background-image: linear-gradient(to top left, rgb(170, 121, 230), rgb(238, 161, 215));
+  scale: 1.01;
+  background-image: linear-gradient(to top left, rgb(179, 129, 239), rgb(236, 134, 205));
   box-shadow: 10px 15px 16px #b1b0b0;
-  transition: opacity 0.5s;
 }
 
 /**************************** Section Fonctionnement **************************/
@@ -141,7 +175,7 @@ h1 {
 .liens-cards-restaurants span {
   position: absolute;
   background-color: #99e2d0;
-  right: 42px;
+  right: 0px;
   padding: 6px;
   margin: 12px;
   color: #008766;
@@ -160,7 +194,7 @@ h1 {
   margin: 0px;
 }
 
-.input-coeur:checked + label .coeur-full {
+.button-coeur:hover .coeur-full {
   opacity: 1;
   background: linear-gradient(#9356dc, #ff79da);
   background-clip: text;
@@ -168,8 +202,13 @@ h1 {
   transform: scale(1.1);
 }
 
-.input-coeur {
-  display: none;
+.button-coeur {
+  border: none;
+  background-color: transparent;
+  padding: 12px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 
 .coeur {
@@ -227,6 +266,16 @@ h1 {
   padding: 20px 20px;
 }
 
+.h2-coeur {
+  margin-bottom: 40px;
+  justify-content: center;
+  align-items: center;
+  gap: 19px;
+}
+.h2-coeur h2 {
+  margin: 0;
+}
+
 .box-menu {
   flex-direction: column;
   justify-content: center;
@@ -235,7 +284,7 @@ h1 {
   padding: 50px 20px;
   width: auto;
   position: relative;
-  top: -33px;
+  top: -50px;
 }
 .box-menu h3 {
   font-weight: normal;
@@ -299,6 +348,14 @@ h1 {
   justify-content: space-between;
 }
 
+.description-plats {
+  margin-bottom: 40px;
+}
+.description-plats h3 {
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
 .element1-button-menu {
   flex-direction: column;
   align-self: center;
@@ -357,15 +414,38 @@ h1 {
     padding: 40px 20px;
   }
 }
-@media (min-width: 768px) and (max-width: 1025px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .fonctionnement {
     display: flex;
     flex-direction: column;
-    padding: 50px 70px;
+    padding: 50px 53px;
   }
   .etapes {
     display: flex;
     flex-direction: row;
+    gap: 25px;
+  }
+  .box-menu {
+    top: -65px;
+    padding: 50px 135px;
+  }
+  .articles {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 100px;
+  }
+  .image-plat-restaurant {
+    width: 100%;
+    height: 383px;
+    object-position: 0px 60%;
+    object-fit: cover;
+  }
+  .restaurant {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .box-etape {
+    display: flex;
   }
 }
 @media (min-width: 1025px) {
@@ -373,11 +453,17 @@ h1 {
     margin: -32px auto;
     padding: 50px 250px;
     max-width: 560px;
+    top: -21px;
+  }
+  .articles {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 100px;
   }
   .image-plat-restaurant {
     width: 100%;
-    aspect-ratio: 1440/435;
-    object-position: 0px -267px;
+    height: 383px;
+    object-position: 0px 60%;
     object-fit: cover;
   }
   .box-choix-menu {
@@ -390,31 +476,30 @@ h1 {
   .container {
     width: 80%;
   }
-  .articles {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 50px 100px;
-  }
   .etapes {
     flex: 1;
     display: flex;
     flex-direction: row;
+    margin: 0;
+    justify-content: space-between;
     gap: 20px;
-    align-items: center;
-    justify-content: center;
+  }
+  .titre {
+    display: flex;
   }
   .box-etape {
     max-width: 300px;
   }
   .fonctionnement {
+    padding: 40px 180px;
     display: flex;
     flex-direction: column;
   }
   .box-footer {
     display: flex;
     flex-direction: row-reverse;
-    align-items: center;
     gap: 30px;
+    align-items: baseline;
   }
   .elements-footer {
     display: flex;
