--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,10 +1,15 @@
 /**************************** General **************************/
-
-$cd-color-blanc: #f3f3f3;
-$cd-color-green-c: #99e2d0;
-$cd-color-green-f: #008766;
-$cd-color-blue: #003a68;
-$cd-color-violet: #9356dc;
+$color-blanc: #ffffff;
+$color-gris-fonce: #eaeaea;
+$color-gris-c: #f3f3f3;
+$color-gris: #f6f6f6;
+$color-green1: #99e2d0;
+$color-green2: #008766;
+$color-blue1: #003a68;
+$color-blue2: #89c8fa;
+$color-violet: #9356dc;
+$color-black: #000000;
+$color-rose: #ff79da;
 
 body {
   height: 100%;
@@ -20,7 +25,7 @@ body {
 
 a {
   text-decoration: none;
-  color: black;
+  color: $color-black;
 }
 
 .flex {
@@ -37,30 +42,30 @@ h1 {
   box-shadow: 0 4px 15px 0px rgb(0 0 0 / 0.15);
 }
 
-// @keyframes jump {
-//   0% {
-//     transform: translateY(0);
-//     background-color: #99e2d0;
-//   }
-//   50% {
-//     transform: translateY(-2rem);
-//     background-color: #61b6a1;
-//   }
-//   100% {
-//     transform: translateY(0);
-//     background-color: #398775;
-//   }
-// }
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+    background-color: $color-blue2;
+  }
+  50% {
+    transform: translateY(-2rem);
+    background-color: $color-violet;
+  }
+  100% {
+    transform: translateY(0);
+    background-color: $color-blue1;
+  }
+}
 
-// @keyframes out {
-//   0% {
-//     visibility: visible;
-//   }
+@keyframes out {
+  0% {
+    visibility: visible;
+  }
 
-//   100% {
-//     visibility: hidden;
-//   }
-// }
+  100% {
+    visibility: hidden;
+  }
+}
 
 // .loader {
 //   position: fixed;
@@ -89,43 +94,51 @@ h1 {
 }
 
 .loader-element-1 {
-  background-color: #99e2d0;
   animation-delay: 0.1s;
 }
 
 .loader-element-2 {
-  background-color: #99e2d0;
   animation-delay: 0.2s;
 }
 
 .loader-element-3 {
-  background-color: #99e2d0;
   animation-delay: 0.3s;
 }
 
 .loader-element-4 {
-  background-color: #99e2d0;
   animation-delay: 0.4s;
 }
 
 /**************************** Header **************************/
 
-.centrer-header {
+.centrer {
+  align-items: center;
   justify-content: center;
-  padding: 30px;
 }
 
 .location {
-  background-color: #f2f2f2;
+  background-color: $color-gris-fonce;
   box-shadow: inset 0px 4px 4px 0px rgb(0 0 0 / 25%);
-  padding: 15px;
+
+  i {
+    font-size: 20px;
+  }
+  .box-location {
+    gap: 12px;
+  }
+}
+
+.logo {
+  img {
+    padding: 30px;
+  }
 }
 
 /**************************** Section Information acceuil **************************/
 
 .information-acceuil {
-  background-color: #f2f2f2;
-  padding: 53px 60px;
+  background-color: $color-gris;
+  padding: 53px 20px;
   text-align: center;
   box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
@@ -135,9 +148,8 @@ h1 {
 }
 
 .style-button {
-  transition: 1s;
   margin-top: 15px;
-  padding: 15px 50px;
+  padding: 15px 30px;
   border-radius: 25px;
   border: none;
   cursor: pointer;
@@ -147,7 +159,7 @@ h1 {
     rgb(255, 121, 218)
   );
   span {
-    color: #ffffff;
+    color: $color-blanc;
     font-weight: bold;
     font-size: 16px;
     white-space: nowrap;
@@ -158,7 +170,7 @@ h1 {
   scale: 1.01;
   background-image: linear-gradient(
     to top left,
-    rgb(179, 129, 239),
+    rgb(171, 111, 246),
     rgb(236, 134, 205)
   );
   box-shadow: 10px 15px 16px #b1b0b0;
@@ -179,7 +191,7 @@ h1 {
     font-weight: bold;
   }
   .number {
-    background-color: #9356dc;
+    background-color: $color-violet;
     border-radius: 100%;
     width: 24px;
     height: 24px;
@@ -187,10 +199,10 @@ h1 {
     left: -14px;
     align-items: center;
     justify-content: center;
-    color: #f6f6f6;
+    color: $color-gris;
   }
   .box-etape {
-    background-color: #f6f6f6;
+    background-color: $color-gris;
 
     border-radius: 20px;
     align-items: center;
@@ -205,12 +217,16 @@ h1 {
   padding-left: 15px;
 }
 
+.shop {
+  color: $color-violet;
+}
+
 /**************************** Section Restaurants **************************/
 .restaurant {
-  background-color: #f2f2f2;
+  background-color: $color-gris;
   padding: 80px 12px;
   article {
-    background-color: white;
+    background-color: $color-blanc;
     border-radius: 15px;
     margin-top: 18px;
   }
@@ -230,11 +246,11 @@ h1 {
   flex-direction: column;
   span {
     position: absolute;
-    background-color: #99e2d0;
+    background-color: $color-green1;
     right: 0px;
     padding: 6px;
     margin: 12px;
-    color: #008766;
+    color: $color-green2;
   }
 }
 
@@ -253,7 +269,7 @@ h1 {
 
 .button-coeur:hover .coeur-full {
   opacity: 1;
-  background: linear-gradient(#9356dc, #ff79da);
+  background: linear-gradient($color-violet, $color-rose);
   background-clip: text;
   -webkit-text-fill-color: transparent;
   transform: scale(1.1);
@@ -285,6 +301,12 @@ h1 {
     font-size: 24px;
   }
 }
+.coeur-stable {
+  opacity: 1;
+  background: linear-gradient($color-violet, $color-rose);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 .box-coeurs * {
   position: absolute;
@@ -297,15 +319,15 @@ h1 {
   padding: 24px;
   h3 {
     font-weight: normal;
-    color: white;
+    color: $color-blanc;
     font-family: "Shrikhand";
     margin: 8px 0px;
   }
   span {
-    color: white;
+    color: $color-blanc;
   }
   i {
-    color: white;
+    color: $color-blanc;
   }
 }
 
@@ -341,16 +363,19 @@ h1 {
 .box-menu {
   flex-direction: column;
   justify-content: center;
-  background-color: #f6f6f6;
+  background-color: $color-gris;
   border-radius: 30px 30px 0px 0px;
-  padding: 50px 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: -79px;
   width: auto;
   position: relative;
-  top: -50px;
   h3 {
     font-weight: normal;
     text-transform: uppercase;
-    border-bottom: #99e2d0 solid 2px;
+    border-bottom: $color-green1 solid 2px;
     width: 50px;
   }
 }
@@ -362,15 +387,15 @@ h1 {
 }
 
 .page-individuelle {
-  background: white;
+  background: $color-blanc;
 }
 
 .box-plat {
-  background-color: #f6f6f6;
+  background-color: $color-gris;
 }
 
 .texte-restaurant.page-bis {
-  background-color: #ffffff;
+  background-color: $color-blanc;
   border-radius: 15.04px;
   padding: 10px 12px;
   margin-top: 12px;
@@ -395,7 +420,7 @@ h1 {
   flex: 1;
   border-radius: 15.4px;
   border: none;
-  background-color: #ffffff;
+  background-color: $color-blanc;
   justify-content: space-between;
   align-items: center;
   padding: 0px;
@@ -411,13 +436,41 @@ h1 {
 }
 
 .description-plats {
+  animation: afficheMenu ease-in 2s backwards;
   margin-bottom: 40px;
+
   h3 {
     margin-bottom: 10px;
     margin-top: 0px;
   }
 }
+
+@keyframes afficheMenu {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
+.description-plats.entree {
+  animation-delay: 0.1s;
+}
+.description-plats.plat {
+  animation-delay: 0.5s;
+}
+.description-plats.dessert {
+  animation-delay: 1s;
+}
+
 .element1-button-menu {
+  .titre-plat {
+    font-weight: bold;
+  }
+  span {
+    display: flex;
+  }
   flex-direction: column;
   align-self: center;
 
@@ -430,6 +483,7 @@ h1 {
   padding-right: 5px;
   p {
     margin: 0;
+    font-weight: bold;
   }
 }
 
@@ -443,17 +497,17 @@ h1 {
   transition: width 2s;
   padding: 22px 0px;
   border-radius: 0px 15.4px 15.4px 0px;
-  background-color: #99e2d0;
+  background-color: $color-green1;
   width: 0px;
   i {
-    color: #f2f2f2;
-    -webkit-text-fill-color: #f2f2f2;
+    color: $color-gris;
+    -webkit-text-fill-color: $color-gris;
   }
 }
 
 .button-commander {
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .animation-test:hover {
@@ -472,9 +526,36 @@ h1 {
   transform: scale(1.2, 1.2);
 }
 
+// ****************media queries******************
 @media (max-width: 768px) {
   .restaurant {
     padding: 40px 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .box-footer {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 80px;
+    align-items: baseline;
+  }
+  .elements-footer {
+    display: flex;
+    flex-flow: row;
+    gap: 30px;
+    .span-footer {
+      margin-left: 0px;
+    }
+    .element {
+      gap: 10px;
+    }
+  }
+  .location {
+    box-shadow: none;
+  }
+  .information-acceuil {
+    box-shadow: none;
   }
 }
 
@@ -491,7 +572,6 @@ h1 {
     gap: 25px;
   }
   .box-menu {
-    top: -65px;
     padding: 50px 135px;
   }
   .articles {
@@ -518,10 +598,15 @@ h1 {
 
 @media (min-width: 1025px) {
   .box-menu {
-    margin: -32px auto;
-    padding: 50px 250px;
+    padding-left: 250px;
+    padding-right: 250px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: -79px;
+    margin-bottom: 0px;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 560px;
-    top: -21px;
   }
   .articles {
     display: grid;
@@ -557,10 +642,7 @@ h1 {
   .titre {
     display: flex;
   }
-  // .etapes {
-  //   display: flex;
-  //   flex-direction: row;
-  // }
+
   .box-etape {
     max-width: 300px;
   }
