--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,20 @@ h1 {
     visibility: hidden;
   }
 }
+.loader {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: hsla(0, 0%, 100%, 0.9);
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: out 0.2s 4s forwards;
+}
+
 .loader-box {
   gap: 40px;
   display: flex;
@@ -104,14 +118,14 @@ h1 {
   padding: 30px;
 }
 
-/**************************** Section Information acceuil **************************/
-.information-acceuil {
+/**************************** Section Information accueil **************************/
+.information-accueil {
   background-color: #f6f6f6;
   padding: 53px 20px;
   text-align: center;
   box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.information-acceuil h3 {
+.information-accueil h3 {
   font-weight: normal;
 }
 
@@ -230,7 +244,7 @@ h1 {
   background: linear-gradient(#9356dc, #ff79da);
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  transform: scale(1.1);
+  transform: scale(1.1, 1.1);
 }
 
 .button-coeur {
