Modification du repli du menu et vérification globale du projet.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -45,11 +45,11 @@ h1 {
 @keyframes jump {
   0% {
     transform: translateY(0);
-    background-color: $color-blue2;
+    background-color: $color-blue1;
   }
   50% {
     transform: translateY(-2rem);
-    background-color: $color-violet;
+    background-color: $color-rose;
   }
   100% {
     transform: translateY(0);
@@ -130,7 +130,7 @@ h1 {
 
 .logo {
   img {
-    padding: 30px;
+    padding: 25px;
   }
 }
 
@@ -336,6 +336,7 @@ h1 {
 }
 
 .elements-footer {
+  display: flex;
   flex-direction: column;
   gap: 6px;
   margin: 2px;
@@ -357,11 +358,11 @@ h1 {
 .h2-coeur {
   margin-bottom: 40px;
   h2 {
+    font-size: 28px;
     margin: 0;
   }
-  justify-content: center;
   align-items: center;
-  gap: 19px;
+  justify-content: space-between;
 }
 
 .box-menu {
@@ -421,7 +422,6 @@ h1 {
 
 .box-choix-menu {
   text-decoration: none;
-  flex: 1;
   border-radius: 15.4px;
   border: none;
   background-color: $color-blanc;
@@ -434,7 +434,7 @@ h1 {
 .button-choix-menu {
   background-color: transparent;
   border: none;
-
+  cursor: pointer;
   flex: 1;
   justify-content: space-between;
 }
@@ -468,16 +468,43 @@ h1 {
   animation-delay: 1s;
 }
 
+// .element1-button-menu {
+//   .titre-plat {
+//     font-size: 18px;
+//     font-weight: bold;
+//     display: flex;
+//     text-overflow: ellipsis;
+//   }
+//   .description-plat {
+//     font-size: 15px;
+//     display: flex;
+//     white-space: nowrap;
+//     text-overflow: ellipsis;
+//   }
+//   flex-direction: column;
+//   align-self: center;
+
+//   padding: 12px;
+// }
+
 .element1-button-menu {
   .titre-plat {
+    font-size: 17px;
     font-weight: bold;
+    max-width: 230px;
+    display: inline-block;
+    white-space: nowrap;
+    text-align: justify;
   }
-  span {
-    display: flex;
+  .description-plat {
+    text-align: justify;
+    font-size: 14px;
+    display: inline-block;
+    max-width: 230px;
+    white-space: nowrap;
   }
   flex-direction: column;
   align-self: center;
-
   padding: 12px;
 }
 
@@ -485,7 +512,7 @@ h1 {
   align-self: end;
   padding-bottom: 12px;
   padding-right: 5px;
-  p {
+  span {
     margin: 0;
     font-weight: bold;
   }
@@ -495,11 +522,21 @@ h1 {
   width: 50px;
 }
 
+.box-choix-menu:hover .description-plat {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.box-choix-menu:hover .titre-plat {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .cloche-menu {
   overflow: hidden;
   justify-content: center;
-  transition: width 2s;
-  padding: 22px 0px;
+  transition: width 0.5s;
+  padding: 27px 0px;
   border-radius: 0px 15.4px 15.4px 0px;
   background-color: $color-green1;
   width: 0px;
@@ -510,8 +547,13 @@ h1 {
 }
 
 .button-commander {
+  .style-button {
+    margin-top: 0px;
+  }
+  display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  align-items: center;
 }
 
 .animation-test:hover {
@@ -538,6 +580,21 @@ h1 {
 }
 
 @media (min-width: 992px) {
+  .box-choix-menu:hover .description-plat {
+    overflow: visible;
+    text-overflow: clip;
+  }
+
+  .box-choix-menu:hover .titre-plat {
+    overflow: visible;
+    text-overflow: clip;
+  }
+  .h2-coeur {
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+
   .box-footer {
     display: flex;
     flex-direction: row-reverse;
@@ -558,7 +615,7 @@ h1 {
   .location {
     box-shadow: none;
   }
-  .information-acceuil {
+  .information-accueil {
     box-shadow: none;
   }
 }
@@ -606,7 +663,7 @@ h1 {
     padding-right: 250px;
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-top: -79px;
+    margin-top: -41px;
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
@@ -641,7 +698,7 @@ h1 {
     flex-direction: row;
     margin: 0;
     justify-content: space-between;
-    gap: 20px;
+    gap: 25px;
   }
   .titre {
     display: flex;
