--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,8 @@ h1 {
   margin: 0px;
 }
 
-.button-coeur:hover .coeur-full {
+.button-coeur:hover .coeur-full,
+.button-coeur:focus .coeur-full {
   opacity: 1;
   background: linear-gradient(#9356dc, #ff79da);
   background-clip: text;
