modification de l'erreur de transformation sur le fichier CSS. Validation du fichier CSS OK.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -169,7 +169,7 @@ h1 {
 }
 
 .style-button:hover {
-  scale: 1.01;
+  transform: scale(1.01);
   background-image: linear-gradient(
     to top left,
     rgb(171, 111, 246),
