--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ h1 {
 }
 
 .style-button:hover {
-  scale: 1.01;
+  transform: scale(1.01);
   background-image: linear-gradient(to top left, rgb(171, 111, 246), rgb(236, 134, 205));
   box-shadow: 10px 15px 16px #b1b0b0;
 }
